{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 218,
  "lineage": "b453b60c-a663-2547-ff50-effc9467216d",
  "resources": [
    {
      "module": "module.pearlALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:192389957878:loadbalancer/app/pearl-alb/02626375ef7e5ba7",
            "arn_suffix": "app/pearl-alb/02626375ef7e5ba7",
            "desync_mitigation_mode": "defensive",
            "dns_name": "pearl-alb-1648558322.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:192389957878:loadbalancer/app/pearl-alb/02626375ef7e5ba7",
            "idle_timeout": 300,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pearl-alb",
            "security_groups": [
              "sg-02cb9a4aa3e566b73"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0cf2b8719dca85815"
              },
              {
                "subnet_id": "subnet-0daf3ea3e23fa9527"
              },
              {
                "subnet_id": "subnet-0dfbee0abe2f19e29"
              }
            ],
            "subnets": [
              "subnet-0cf2b8719dca85815",
              "subnet-0daf3ea3e23fa9527",
              "subnet-0dfbee0abe2f19e29"
            ],
            "vpc_id": "vpc-0f6eba2e314dcf4ba",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.pearlVPC.aws_security_group.access_for_port_80",
            "module.pearlVPC.aws_subnet.public-subnet",
            "module.pearlVPC.aws_vpc.pear_vpc",
            "module.pearlVPC.data.aws_availability_zones.available",
            "module.pearlVPC.data.aws_subnet_ids.public"
          ]
        }
      ]
    },
    {
      "module": "module.pearlALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:192389957878:listener/app/pearl-alb/02626375ef7e5ba7/8de19865d147de9e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:192389957878:targetgroup/pearlTG/c050cd462e80b51b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:192389957878:listener/app/pearl-alb/02626375ef7e5ba7/8de19865d147de9e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:192389957878:loadbalancer/app/pearl-alb/02626375ef7e5ba7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pearlALB.aws_lb.application_lb",
            "module.pearlALB.aws_lb_target_group.target_group_1",
            "module.pearlVPC.aws_security_group.access_for_port_80",
            "module.pearlVPC.aws_subnet.public-subnet",
            "module.pearlVPC.aws_vpc.pear_vpc",
            "module.pearlVPC.data.aws_availability_zones.available",
            "module.pearlVPC.data.aws_subnet_ids.public"
          ]
        }
      ]
    },
    {
      "module": "module.pearlALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:192389957878:targetgroup/dummy/c37c72be9168a34b",
            "arn_suffix": "targetgroup/dummy/c37c72be9168a34b",
            "connection_termination": false,
            "deregistration_delay": "50",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 6,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:192389957878:targetgroup/dummy/c37c72be9168a34b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "dummy",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f6eba2e314dcf4ba"
          },
          "dependencies": [
            "module.pearlVPC.aws_vpc.pear_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pearlALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:192389957878:targetgroup/pearlTG/c050cd462e80b51b",
            "arn_suffix": "targetgroup/pearlTG/c050cd462e80b51b",
            "connection_termination": false,
            "deregistration_delay": "50",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 6,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:192389957878:targetgroup/pearlTG/c050cd462e80b51b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "pearlTG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f6eba2e314dcf4ba"
          },
          "dependencies": [
            "module.pearlVPC.aws_vpc.pear_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pearlVPC",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f072be7bda591ed8",
            "domain": "vpc",
            "id": "eipalloc-0f072be7bda591ed8",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-220-186-253.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.220.186.253",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.pearlVPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:192389957878:internet-gateway/igw-023af357c93491863",
            "id": "igw-023af357c93491863",
            "owner_id": "192389957878",
            "tags": {
              "Name": "tf-igw"
            },
            "tags_all": {
              "Name": "tf-igw"
            },
            "vpc_id": "vpc-0f6eba2e314dcf4ba"
          },
          "dependencies": [
            "module.pearlVPC.aws_vpc.pear_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pearlVPC",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f072be7bda591ed8",
            "connectivity_type": "public",
            "id": "nat-0e5e58f9de9b921cf",
            "network_interface_id": "eni-083bf368143fdb47e",
            "private_ip": "10.0.8.241",
            "public_ip": "54.220.186.253",
            "subnet_id": "subnet-0cf2b8719dca85815",
            "tags": {
              "Name": "nat-gw"
            },
            "tags_all": {
              "Name": "nat-gw"
            }
          },
          "dependencies": [
            "module.pearlVPC.aws_eip.nat",
            "module.pearlVPC.aws_subnet.public-subnet",
            "module.pearlVPC.aws_vpc.pear_vpc",
            "module.pearlVPC.data.aws_availability_zones.available",
            "module.pearlVPC.data.aws_subnet_ids.public"
          ]
        }
      ]
    },
    {
      "module": "module.pearlVPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:192389957878:route-table/rtb-09856b2795c4ed84b",
            "id": "rtb-09856b2795c4ed84b",
            "owner_id": "192389957878",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e5e58f9de9b921cf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6eba2e314dcf4ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pearlVPC.aws_eip.nat",
            "module.pearlVPC.aws_nat_gateway.nat",
            "module.pearlVPC.aws_subnet.public-subnet",
            "module.pearlVPC.aws_vpc.pear_vpc",
            "module.pearlVPC.data.aws_availability_zones.available",
            "module.pearlVPC.data.aws_subnet_ids.public"
          ]
        }
      ]
    },
    {
      "module": "module.pearlVPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:192389957878:route-table/rtb-06dea8a06e65a33b7",
            "id": "rtb-06dea8a06e65a33b7",
            "owner_id": "192389957878",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-023af357c93491863",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6eba2e314dcf4ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pearlVPC.aws_internet_gateway.gw",
            "module.pearlVPC.aws_vpc.pear_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pearlVPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e4cc8b85a823996",
            "route_table_id": "rtb-06dea8a06e65a33b7",
            "subnet_id": "subnet-0cf2b8719dca85815"
          },
          "dependencies": [
            "module.pearlVPC.aws_internet_gateway.gw",
            "module.pearlVPC.aws_route_table.public",
            "module.pearlVPC.aws_subnet.public-subnet",
            "module.pearlVPC.aws_vpc.pear_vpc",
            "module.pearlVPC.data.aws_availability_zones.available",
            "module.pearlVPC.data.aws_subnet_ids.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e0fcac95f24e296",
            "route_table_id": "rtb-06dea8a06e65a33b7",
            "subnet_id": "subnet-0daf3ea3e23fa9527"
          },
          "dependencies": [
            "module.pearlVPC.aws_internet_gateway.gw",
            "module.pearlVPC.aws_route_table.public",
            "module.pearlVPC.aws_subnet.public-subnet",
            "module.pearlVPC.aws_vpc.pear_vpc",
            "module.pearlVPC.data.aws_availability_zones.available",
            "module.pearlVPC.data.aws_subnet_ids.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07401993262079ec5",
            "route_table_id": "rtb-06dea8a06e65a33b7",
            "subnet_id": "subnet-0dfbee0abe2f19e29"
          },
          "dependencies": [
            "module.pearlVPC.aws_internet_gateway.gw",
            "module.pearlVPC.aws_route_table.public",
            "module.pearlVPC.aws_subnet.public-subnet",
            "module.pearlVPC.aws_vpc.pear_vpc",
            "module.pearlVPC.data.aws_availability_zones.available",
            "module.pearlVPC.data.aws_subnet_ids.public"
          ]
        }
      ]
    },
    {
      "module": "module.pearlVPC",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "access_for_port_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:192389957878:security-group/sg-02cb9a4aa3e566b73",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02cb9a4aa3e566b73",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "access_80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "access_80",
            "name_prefix": "",
            "owner_id": "192389957878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "access_80"
            },
            "tags_all": {
              "Name": "access_80"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6eba2e314dcf4ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pearlVPC.aws_vpc.pear_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pearlVPC",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:192389957878:security-group/sg-0e0cd5177916c05c1",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0cd5177916c05c1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ecs_80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02cb9a4aa3e566b73"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs_80",
            "name_prefix": "",
            "owner_id": "192389957878",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "access_80"
            },
            "tags_all": {
              "Name": "access_80"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f6eba2e314dcf4ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.pearlVPC.aws_security_group.access_for_port_80",
            "module.pearlVPC.aws_vpc.pear_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.pearlVPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:192389957878:subnet/subnet-0cf2b8719dca85815",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf2b8719dca85815",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "192389957878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "Pearl",
              "Created_By": "Terraform",
              "Environment": "DEMO",
              "Type": "publicSubnet"
            },
            "tags_all": {
              "Application": "Pearl",
              "Created_By": "Terraform",
              "Environment": "DEMO",
              "Type": "publicSubnet"
            },
            "vpc_id": "vpc-0f6eba2e314dcf4ba"
          },
          "dependencies": [
            "module.pearlVPC.aws_vpc.pear_vpc",
            "module.pearlVPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:192389957878:subnet/subnet-0dfbee0abe2f19e29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfbee0abe2f19e29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "192389957878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "Pearl",
              "Created_By": "Terraform",
              "Environment": "DEMO",
              "Type": "publicSubnet"
            },
            "tags_all": {
              "Application": "Pearl",
              "Created_By": "Terraform",
              "Environment": "DEMO",
              "Type": "publicSubnet"
            },
            "vpc_id": "vpc-0f6eba2e314dcf4ba"
          },
          "dependencies": [
            "module.pearlVPC.aws_vpc.pear_vpc",
            "module.pearlVPC.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:192389957878:subnet/subnet-0daf3ea3e23fa9527",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0daf3ea3e23fa9527",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "192389957878",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "Pearl",
              "Created_By": "Terraform",
              "Environment": "DEMO",
              "Type": "publicSubnet"
            },
            "tags_all": {
              "Application": "Pearl",
              "Created_By": "Terraform",
              "Environment": "DEMO",
              "Type": "publicSubnet"
            },
            "vpc_id": "vpc-0f6eba2e314dcf4ba"
          },
          "dependencies": [
            "module.pearlVPC.aws_vpc.pear_vpc",
            "module.pearlVPC.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.pearlVPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pear_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:192389957878:vpc/vpc-0f6eba2e314dcf4ba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0026d4f76b21b301c",
            "default_route_table_id": "rtb-0fb82773926d5860d",
            "default_security_group_id": "sg-0a888d6bc15aa113c",
            "dhcp_options_id": "dopt-8fdea2e9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f6eba2e314dcf4ba",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fb82773926d5860d",
            "owner_id": "192389957878",
            "tags": {
              "Application": "Pearl",
              "Created_By": "Terraform",
              "Environment": "DEMO"
            },
            "tags_all": {
              "Application": "Pearl",
              "Created_By": "Terraform",
              "Environment": "DEMO"
            }
          }
        }
      ]
    }
  ]
}